{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 17,
  "lineage": "d6037be3-5a79-6f3f-0f89-54a745cab357",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb_gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:vpc-endpoint/vpce-074285b297fd6f7b0",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-074285b297fd6f7b0",
            "ip_address_type": "ipv4",
            "owner_id": "137263334750",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0281f09ca6d2c9763",
              "rtb-05161d5d1a107f35b"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "DynamoDB-Gateway-Endpoint"
            },
            "tags_all": {
              "Name": "DynamoDB-Gateway-Endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137263334750",
            "id": "vpce-074285b297fd6f7b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:network-acl/acl-004368e068c1a65f9",
            "default_network_acl_id": "acl-004368e068c1a65f9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-004368e068c1a65f9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "137263334750",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-03b7488d08da9f71c",
              "subnet-0ce535dc17937af3d"
            ],
            "tags": {
              "Name": "dynamodb-vpc-default"
            },
            "tags_all": {
              "Name": "dynamodb-vpc-default"
            },
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:route-table/rtb-023ce37a65b05659f",
            "default_route_table_id": "rtb-023ce37a65b05659f",
            "id": "rtb-023ce37a65b05659f",
            "owner_id": "137263334750",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "dynamodb-vpc-default"
            },
            "tags_all": {
              "Name": "dynamodb-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:security-group/sg-044bc98108b772f52",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-044bc98108b772f52",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "137263334750",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dynamodb-vpc-default"
            },
            "tags_all": {
              "Name": "dynamodb-vpc-default"
            },
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:internet-gateway/igw-09fd81fca70752fff",
            "id": "igw-09fd81fca70752fff",
            "owner_id": "137263334750",
            "region": "us-east-1",
            "tags": {
              "Name": "dynamodb-vpc"
            },
            "tags_all": {
              "Name": "dynamodb-vpc"
            },
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09fd81fca70752fff",
            "id": "r-rtb-0e71b3386960c72541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0e71b3386960c7254",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137263334750",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0e71b3386960c7254"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:route-table/rtb-05161d5d1a107f35b",
            "id": "rtb-05161d5d1a107f35b",
            "owner_id": "137263334750",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "dynamodb-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "dynamodb-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137263334750",
            "id": "rtb-05161d5d1a107f35b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:route-table/rtb-0281f09ca6d2c9763",
            "id": "rtb-0281f09ca6d2c9763",
            "owner_id": "137263334750",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "dynamodb-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "dynamodb-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137263334750",
            "id": "rtb-0281f09ca6d2c9763",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:route-table/rtb-0e71b3386960c7254",
            "id": "rtb-0e71b3386960c7254",
            "owner_id": "137263334750",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "dynamodb-vpc-public"
            },
            "tags_all": {
              "Name": "dynamodb-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137263334750",
            "id": "rtb-0e71b3386960c7254",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab5aeccb43b3a1b4",
            "region": "us-east-1",
            "route_table_id": "rtb-05161d5d1a107f35b",
            "subnet_id": "subnet-07aa8d766f87341a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a1f46a5567b79cc",
            "region": "us-east-1",
            "route_table_id": "rtb-0281f09ca6d2c9763",
            "subnet_id": "subnet-0ce535dc17937af3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0662847fa7a6277c4",
            "region": "us-east-1",
            "route_table_id": "rtb-0e71b3386960c7254",
            "subnet_id": "subnet-03b7488d08da9f71c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:subnet/subnet-07aa8d766f87341a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07aa8d766f87341a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137263334750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dynamodb-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "dynamodb-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137263334750",
            "id": "subnet-07aa8d766f87341a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:subnet/subnet-0ce535dc17937af3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce535dc17937af3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137263334750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dynamodb-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "dynamodb-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137263334750",
            "id": "subnet-0ce535dc17937af3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:subnet/subnet-03b7488d08da9f71c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b7488d08da9f71c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137263334750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dynamodb-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "dynamodb-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-04fc8d02a26ef113d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137263334750",
            "id": "subnet-03b7488d08da9f71c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137263334750:vpc/vpc-04fc8d02a26ef113d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004368e068c1a65f9",
            "default_route_table_id": "rtb-023ce37a65b05659f",
            "default_security_group_id": "sg-044bc98108b772f52",
            "dhcp_options_id": "dopt-005daeccc5f12b22c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04fc8d02a26ef113d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023ce37a65b05659f",
            "owner_id": "137263334750",
            "region": "us-east-1",
            "tags": {
              "Name": "dynamodb-vpc"
            },
            "tags_all": {
              "Name": "dynamodb-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137263334750",
            "id": "vpc-04fc8d02a26ef113d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}